# findmyendpoints

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: findmyendpoints.py
src/findmyendpoints.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: NetworkInterface.py  bcolors.py
src/models/NetworkInterface/: NetworkInterface.py
